[project]
name = "dataplatform-backend"
version = "0.1.0"
description = "Data Platform Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.3",
    "geoalchemy2>=0.19.0",
    "httpx>=0.28.1",
    "pre-commit-hooks>=6.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_sort_within_sections = true
skip = ["migrations", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # Conflict with black: whitespace before ':'
    "W503"   # Conflict with black: line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    ".venv",
]
